--- a/app/src/main/res/menu/create_profile_toolbar_menu.xml
+++ b/app/src/main/res/menu/create_profile_toolbar_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:icon="@drawable/ic_check"
         android:id="@+id/btnSaveProfile"
-        android:title="Save"
+        android:title="@string/save"
         app:showAsAction="always"
         android:orderInCategory="1"/>
 </menu>
