--- a/app/src/main/res/layout/profile_list_layout.xml
+++ b/app/src/main/res/layout/profile_list_layout.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:background="@drawable/statelist_item_background">
 
     <ImageView
         android:layout_width="35dp"
