--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,27 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="tabTextColor">@color/tabTextColor</item>
         <item name="tabIndicatorColor">@color/tabIndicatorColor</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="actionModeBackground">@color/tabIndicatorColor</item>
     </style>
+
+    <!-- second application theme. -->
+    <!--<style name="AppThemeSecond" parent="Theme.AppCompat.Light.DarkActionBar">-->
+        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+        <!--<item name="colorAccent">@color/colorAccent</item>-->
+        <!--<item name="tabTextColor">@color/tabTextColor</item>-->
+        <!--<item name="tabIndicatorColor">@color/tabIndicatorColor</item>-->
+        <!--<item name="windowActionBarOverlay">true</item>-->
+        <!--<item name="actionModeBackground">@color/tabIndicatorColor</item>-->
+    <!--</style>-->
 
 </resources>
