Contextual App Bar added

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,15 +13,15 @@
     </style>
 
     <!-- second application theme. -->
-    <!--<style name="AppThemeSecond" parent="Theme.AppCompat.Light.DarkActionBar">-->
-        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-        <!--<item name="colorAccent">@color/colorAccent</item>-->
-        <!--<item name="tabTextColor">@color/tabTextColor</item>-->
-        <!--<item name="tabIndicatorColor">@color/tabIndicatorColor</item>-->
-        <!--<item name="windowActionBarOverlay">true</item>-->
-        <!--<item name="actionModeBackground">@color/tabIndicatorColor</item>-->
-    <!--</style>-->
+    <style name="AppThemeNoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="tabTextColor">@color/tabTextColor</item>
+        <item name="tabIndicatorColor">@color/tabIndicatorColor</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="actionModeBackground">@color/tabIndicatorColor</item>
+    </style>
 
 </resources>
