--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -43,7 +43,7 @@
             android:layout_height="match_parent"
             android:layout_marginRight="50dp"
             android:gravity="start"
-            android:hint="@string/profile_name" />
+            android:hint="@string/profile_name_label" />
 
     </LinearLayout>
 
@@ -60,7 +60,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/profile_sexe"
+            android:text="@string/profile_sexe_label"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <Spinner
@@ -69,7 +69,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:gravity="start"
-            android:hint="@string/profile_sexe"
+            android:hint="@string/profile_sexe_label"
             android:entries="@array/genderListItems" />
 
     </LinearLayout>
