--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:elevation="5dp"
             app:tabGravity="fill"
             app:tabIndicatorColor="@color/tabIndicatorColor"
+            app:tabSelectedTextColor="@color/tabIndicatorColor"
             app:tabMode="fixed"
             app:tabTextColor="@color/tabTextColor" />
 
