--- a/app/src/main/res/menu/bottom_menu_navigation.xml
+++ b/app/src/main/res/menu/bottom_menu_navigation.xml
@@ -3,20 +3,20 @@
 
     <item
         android:id="@+id/homeItem"
-        android:title="@string/home"
+        android:title="@string/home_label"
         android:icon="@drawable/ic_home"/>
     <item
         android:id="@+id/profilesItem"
-        android:title="@string/profiles"
+        android:title="@string/profiles_label"
         android:icon="@drawable/ic_profile"
         android:checked="true"/>
     <item
         android:id="@+id/taskItem"
-        android:title="@string/task"
+        android:title="@string/task_label"
         android:icon="@drawable/ic_task_schedule"/>
     <item
         android:id="@+id/settingsItem"
-        android:title="@string/settings"
+        android:title="@string/settings_label"
         android:icon="@drawable/ic_settings"/>
 
 </menu>
