--- a/app/src/main/res/menu/profile_detail_menu.xml
+++ b/app/src/main/res/menu/profile_detail_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menuEdit"
-        android:title="@string/edit"
+        android:title="@string/item_edit"
         android:icon="@drawable/ic_edit"
         app:showAsAction="never"
         android:orderInCategory="1"/>
