--- a/app/src/main/res/layout/measurement_card_view.xml
+++ b/app/src/main/res/layout/measurement_card_view.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content  ">
 
             <TextView
-                android:id="@+id/mensurationLabel"
+                android:id="@+id/measurementLabel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -28,12 +28,12 @@
                 android:textAlignment="textStart"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/mensurationValue"
+                app:layout_constraintEnd_toStartOf="@+id/measurementValue"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/mensurationValue"
+                android:id="@+id/measurementValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
