--- a/app/src/main/res/layout/activity_create_profile.xml
+++ b/app/src/main/res/layout/activity_create_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CreateProfileActivity">
+    tools:context="com.projects.tailordget.activities.CreateProfileActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/createProfileToolbar"
