--- a/app/src/main/res/layout/fragment_profile_commands.xml
+++ b/app/src/main/res/layout/fragment_profile_commands.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentProfileCommands">
+    tools:context="com.projects.tailordget.fragments.FragmentProfileCommands">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
