--- a/app/src/main/res/layout/fragment_profile_oversee.xml
+++ b/app/src/main/res/layout/fragment_profile_oversee.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentProfileOversee">
+    tools:context="com.projects.tailordget.fragments.FragmentProfileOversee">
 
     <!-- TODO: Update blank fragment layout -->
 
