--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:elevation="0dp"
-        design:title="@string/profileActivityTitle"
+        design:title="@string/label_profile"
         design:titleTextColor="@color/tabTextColor" />
 
     <LinearLayout
