--- a/app/src/main/res/layout/fragment_profile_order.xml
+++ b/app/src/main/res/layout/fragment_profile_order.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.projects.tailordget.fragments.FragmentProfileCommands">
+    tools:context="com.projects.tailordget.fragments.FragmentProfileOrder">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Commands"
+        android:text="@string/label_order"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold" />
