--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,52 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:theme="@style/AppTheme.NoActionBar"
     tools:context="com.projects.tailordget.activities.MainActivity">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/profilesToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:elevation="0dp"
-        design:title="@string/label_profile"
-        design:titleTextColor="@color/tabTextColor" />
-
-    <LinearLayout
-        android:id="@+id/contentLinearLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:background="@color/cardview_light_background"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profilesToolbar">
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/profilesTabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:elevation="5dp"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="@color/tabIndicatorColor"
-            app:tabSelectedTextColor="@color/tabIndicatorColor"
-            app:tabMode="fixed"
-            app:tabTextColor="@color/tabTextColor" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/profilesViewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v4.view.ViewPager>
-
-    </LinearLayout>
 
     <!--<FrameLayout-->
         <!--android:id="@+id/frameLayout2"-->
@@ -68,6 +24,17 @@
         <!--android:layout_height="4dp"-->
         <!--android:layout_gravity="top"-->
         <!--android:background="@drawable/shadow" />-->
+
+    <FrameLayout
+        android:id="@+id/mainActivityFrameLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationView"
