--- a/app/src/main/res/layouts/activities/layout/fragment_module_tasks.xml
+++ b/app/src/main/res/layouts/activities/layout/fragment_module_tasks.xml
@@ -6,7 +6,7 @@
     xmlns:design="http://schemas.android.com/tools">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/homeToolbar"
+        android:id="@+id/tasksToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -24,20 +24,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeToolbar">
+        app:layout_constraintTop_toBottomOf="@+id/tasksToolbar">
 
         <LinearLayout
-            android:id="@+id/homeLinearLayout"
+            android:id="@+id/tasksLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/home_label"
-                android:textSize="36sp" />
+                android:text="TASKS"
+                android:textAlignment="center"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
 
