--- a/app/src/main/res/menu/bottom_menu_navigation.xml
+++ b/app/src/main/res/menu/bottom_menu_navigation.xml
@@ -16,7 +16,7 @@
         android:icon="@drawable/ic_task_schedule"/>
     <item
         android:id="@+id/settingsItem"
-        android:title="@string/settings_label"
+        android:title="@string/label_settings"
         android:icon="@drawable/ic_settings"/>
 
 </menu>
